# dprint-plugin-exec

./: .gitignore  Cargo.toml  LICENSE  README.md  dprint.json  package.json
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.generate.ts  ci.generated.yml  ci.ts  ci.yml  release.generated.yml  release.ts  release.yml
deployment/: schema.json
scripts/: createPluginFile.js  createPluginFile.ts  create_npm_packages.ts  create_plugin_file.ts  generate_release_notes.ts  publish_npm_packages.ts
src/: configuration.rs  handler.rs  lib.rs  main.rs
tests/: .editorconfig  fold.ts  tests.rs
tests/resources/: append-marker.js  multi-line.txt
tests/specs/FormatFile/: LongFile.txt  LongFileStdin.txt  MultiLineFile.txt  OneLineFile.txt
tests/specs/General/: Associations_Match.txt  Associations_NoMatch.txt  Rustfmt.txt  SetupCommand.txt  Stdout_All.txt
