[package]
name = "dprint-plugin-exec"
version = "0.4.3"
authors = ["Alex Zherebtsov <zherebtsovalex@gmail.com>", "David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-exec"
keywords = ["formatting", "formatter", "exec"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-exec"
description = "Code formatter based on external tool execution."

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1.0.68"
dprint-core = { version = "0.63.3", features = ["process"] }
globset = "0.4.13"
handlebars = "4.4.0"
serde = { version = "1.0.147", features = ["derive"] }
splitty = "1.0.1"
tokio = { version = "1.33.0", features = ["time"] }

[dev-dependencies]
dprint-development = "0.9.5"
pretty_assertions = "1.4.0"
serde_json = "1.0.107"
