[package]
name = "dprint-plugin-exec"
version = "0.6.0"
authors = ["Alex Zherebtsov <zherebtsovalex@gmail.com>", "David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-exec"
keywords = ["formatting", "formatter", "exec"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-exec"
description = "Code formatter based on external tool execution."

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1.0.86"
dprint-core = { version = "0.67.0", features = ["process"] }
globset = "0.4.14"
handlebars = "5.1.2"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.9"
splitty = "1.0.1"
tokio = { version = "1.38.0", features = ["time"] }

[dev-dependencies]
dprint-development = "0.10.1"
pretty_assertions = "1.4.0"
serde_json = "1.0.120"
